@@ -10,6 +10,7 @@ tig (1.0-1) UNRELEASED; urgency=low
     - Don't remove 'test-graph'; it is no longer installed by 'make install'.
     - Don't try to install TODO; it no longer exists.
     - Split build target into build-{arch,indep} as recommended by policy.
+    - Enabled harding build flags (use dpkg-buildflags).
   * debian/control:
     - Updated standards-version to 3.9.3 -- no changes.
 
